More imports and fixes and lifestyle to life change

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -87,7 +87,7 @@ tags:
   emoj: "📱"
   titl: "iPadOnly"
   tit2: "I'm using the iPad as my main computing device since 2012. It started with the retina iPad 3, a year later I wrote the [#iPadOnly book](https://ipadonly.com/){:target='_blank'} on an iPad 4 and as I upgraded my iPads, now I'm working on the 2020 iPad Pro 11. Basically, I'm showing how an iPad is a *real computer*."
-- name: lifestyle
+- name: life
   emoj: "😎"
   titl: "Lifestyle"
   tit2: "How my life influences my business and the other way round. How I design my lifestyle and how I succeed or fail in the process."
