--- a/_data/main.yml
+++ b/_data/main.yml
@@ -123,6 +123,10 @@ tags:
   emoj: "🎧"
   titl: "The Podcast"
   tit2: "[The Podcast](https://thepodcast.fm){:target='_blank'} is a podcast I've been recording with Radek, Nozbe's VP of Engineering. After more than 4 years of pretty regular weekly shows, now it's not as regular as we'd like."
+- name: sports
+  emoj: "🎾"
+  titl: "Sports"
+  tit2: "My struggles as an amateur triathlete and a novice tennis player… and most of all, how I'm trying to stay in shape."
 - name: video
   emoj: "🎬"
   titl: "Videos"
