--- a/_data/main.yml
+++ b/_data/main.yml
@@ -32,7 +32,7 @@ twitter: "MSliwinski"
 
 ad: "true"
 ad_link: "https://nozbe.com/blog/2020-black-friday-special-offer/"
-ad_text: "BLACK FRIDAY deal on Nozbe Personal and Nozbe Teams - GET 4 MONTHS EXTRA FREE!"
+ad_text: "BLACK FRIDAY on Nozbe Personal and Nozbe Teams - GET 4 MONTHS FREE!"
 
 now: "This is a [“now”](https://nownownow.com/p/Wwy1){:target='_blank'} page inspired by [Derek Sievers](https://sivers.org/now){:target='_blank'}. It's a “status update“ on my life, my projects and priorities. I try to post a new update [every Friday](/tag/now/) while doing a weekly review. Here's my latest update:"
 
