--- a/_data/main.yml
+++ b/_data/main.yml
@@ -30,7 +30,7 @@ read_es: "Sigue leyendo"
 
 twitter: "MSliwinski"
 
-ad: "true"
+ad: "false"
 ad_link: "https://nozbe.com/blog/2020-black-friday-special-offer/"
 ad_text: "BLACK FRIDAY on Nozbe Personal and Nozbe Teams - GET 4 MONTHS FREE!"
 
