Last renames of tags

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -175,7 +175,7 @@ tags_pl:
   emoj: "😎"
   titl: "Styl życia"
   tit2: "Jak życie wpływa na mój biznes i odwrotnie. Jak projektuję swój 'styl życia' i na ile mi to wychodzi lub nie."
-- name: webinar
+- name: webinary
   emoj: "💻"
   titl: "Webinary"
   tit2: "Webinary, które organizowałem jako założyciel [Nozbe](https://nozbe.com/pl/?a=mike){:target='_blank'} oraz ekspert z dziedziny produktywności osobistej i zespołowej czy zarządzania sobą w czasie. Każdy Webinar to solidna dawka wiedzy, więc zapraszam do słuchania, oglądania i nauki zupełnie za darmo!"
@@ -185,9 +185,9 @@ tags_es:
   emoj: "☑️"
   titl: "Productividad"
   tit2: "Productividad personal y empresarial. Organización y gestión de proyectos y tareas. Como liderar un equipo con eficacia gracias a la comunicación a través de tareas y comentarios. Estoy promoviendo estos conceptos con mi nueva aplicación [Nozbe Teams](https://nozbe.com/es/?a=mike){:target='_blank'}."
-- name: webinar
+- name: seminarios
   emoj: "💻"
-  titl: "Webinars"
+  titl: "Seminarios Web"
   tit2: "Webinars que preparé como fundador de [Nozbe](https://nozbe.com/es/?a=mike){:target='_blank'} y como experto de productividad personal y gestión de los equipos. Cada webinar contiene muchos trucos y consejos, así que disfruta y ¡aprende gratis!"
   
 
